testdata/baselines/reference/submodule/conformance/nodeModulesAllowJsCjsFromJs(module=nodenext).errors.txt
bar.ts(1,8): error TS2613: Module '"foo"' has no default export. Did you mean to use 'import { foo } from "foo"' instead?
foo.cjs(1,1): error TS2304: Cannot find name 'exports'.


==== foo.cjs (1 errors) ====
    exports.foo = "foo"
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
==== bar.ts (1 errors) ====
    import foo from "./foo.cjs"
           ~~~
!!! error TS2613: Module '"foo"' has no default export. Did you mean to use 'import { foo } from "foo"' instead?
    foo.foo;